# plasma-workspace

./: CMakeLists.txt
applets/batterymonitor/package/contents/ui/: PopupDialog.qml
applets/digital-clock/package/contents/ui/: CalendarView.qml
applets/kicker/plugin/: appentry.cpp
kcms/colors/: colors.cpp  colors.h  colorsapplicator.cpp
kcms/fonts/: fonts.cpp  previewimageprovider.cpp
kcms/fonts/package/contents/ui/: main.qml
kcms/region_language/: CMakeLists.txt  kcm_regionandlang.json  kcmregionandlang.cpp  kcmregionandlang.h  languagelistmodel.cpp  languagelistmodel.h  localegenerator.cpp  localegenerator.h  localegeneratorbase.cpp  localegeneratorbase.h  localegeneratorglibc.cpp  localegeneratorglibc.h  localegeneratorubuntu.cpp  localegeneratorubuntu.h  localelistmodel.cpp  localelistmodel.h  optionsmodel.cpp  optionsmodel.h  regionandlangsettings.cpp  regionandlangsettings.h  regionandlangsettings_p.kcfgc  regionandlangsettingsprivate.kcfgc
kcms/region_language/localegenhelper/: CMakeLists.txt  localegenhelper.cpp  localegenhelper.h
kcms/region_language/package/contents/ui/: AdvancedLanguageSelectPage.qml  main.qml
klipper/: CMakeLists.txt  klipper.cpp  klipper.h
libtaskmanager/: tasktools.cpp
lookandfeel/: metadata.json
lookandfeel/contents/components/: SessionManagementScreen.qml  UserDelegate.qml
lookandfeel/contents/lockscreen/: LockScreenUi.qml  MainBlock.qml
runners/bookmarks/: bookmarksrunner.cpp
runners/webshortcuts/: webshortcutrunner.cpp
sddm-theme/: Login.qml
shell/: main.cpp  panelview.cpp  panelview.h
shell/scripting/: scriptengine_v1.cpp
wallpapers/image/: CMakeLists.txt  Messages.sh
wallpapers/image/imagepackage/contents/ui/: ColorOption.qml  ConfigGeneral.qml  ResizeComboBox.qml  WallpaperDelegate.qml  WallpaperGridView.qml  config.qml  main.qml
wallpapers/image/plugin/: CMakeLists.txt  imagebackend.cpp  imageplugin.cpp  slidefiltermodel.cpp
wallpapers/image/plugin/autotests/: test_imagelistmodel.cpp  test_imageproxymodel.cpp  test_packagelistmodel.cpp  tst_imagebackend.qml
wallpapers/image/plugin/model/: abstractimagelistmodel.h  imagelistmodel.cpp  imagelistmodel.h  imageproxymodel.cpp  packagelistmodel.cpp  packagelistmodel.h  xmlimagelistmodel.cpp  xmlpreviewgenerator.cpp
wallpapers/image/plugin/provider/: packageimageprovider.cpp
wallpapers/image/slideshowpackage/contents/ui/: ConfigGeneral.qml  SlideshowMode.qml  main.qml
